[gd_scene load_steps=5 format=3 uid="uid://f45rq8ydwwoh"]

[ext_resource type="Script" uid="uid://cjkh2q0473qmt" path="res://scripts/ui/pausa_menu.gd" id="1_nggwh"]
[ext_resource type="Shader" uid="uid://gje18y5aiaty" path="res://scenes/ui/PausaMenu.gdshader" id="2_nggwh"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_6viru"]
shader = ExtResource("2_nggwh")
shader_parameter/lod = 0.0

[sub_resource type="Theme" id="Theme_xuc83"]

[node name="PausaMenu" type="CanvasLayer"]
process_mode = 3
layer = 10
script = ExtResource("1_nggwh")

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
modulate = Color(1, 1, 1, 0.00784314)
material = SubResource("ShaderMaterial_6viru")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.597176, 0.597176, 0.597176, 0.376471)

[node name="PanelContainer" type="PanelContainer" parent="."]
process_mode = 3
modulate = Color(0.93845, 0.93845, 0.93845, 0)
offset_left = 382.0
offset_top = 182.0
offset_right = 1037.0
offset_bottom = 272.0
mouse_filter = 1

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
process_mode = 3
layout_mode = 2

[node name="jugar" type="Button" parent="PanelContainer/VBoxContainer"]
process_mode = 3
layout_mode = 2
theme = SubResource("Theme_xuc83")
text = "jugar"

[node name="reiniciar" type="Button" parent="PanelContainer/VBoxContainer"]
process_mode = 3
layout_mode = 2
text = "reiniciar"

[node name="salir" type="Button" parent="PanelContainer/VBoxContainer"]
process_mode = 3
layout_mode = 2
text = "salir"

[connection signal="pressed" from="PanelContainer/VBoxContainer/jugar" to="." method="_on_jugar_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/reiniciar" to="." method="_on_reiniciar_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/reiniciar" to="." method="_on_opciones_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/salir" to="." method="_on_salir_pressed"]
